--- a/receitas/lib/receitas_web/components/layouts/app.html.heex
+++ b/receitas/lib/receitas_web/components/layouts/app.html.heex
@@ -1,19 +1,16 @@
-<header class="px-4 sm:px-6 lg:px-8">
-  <div class="flex items-center justify-between border-b border-zinc-100 py-3 text-sm">
+<header class="px-4 sm:px-6 lg:px-8 bg-zred">
+  <div class="flex items-center justify-between py-3 text-sm">
     <div class="flex items-center gap-4">
       <a href="/">
         <img src={~p"/images/logo.svg"} width="36" />
       </a>
-      <p class="bg-brand/5 text-brand rounded-full px-2 font-medium leading-6">
-        v<%= Application.spec(:phoenix, :vsn) %>
-      </p>
     </div>
     <div class="flex items-center gap-4 font-semibold leading-6 text-zinc-900">
-      <a href="https://twitter.com/elixirphoenix" class="hover:text-zinc-700">
-        @elixirphoenix
+      <a href="/recipes" class="bg-zred text-zinc-900 rounded-lg px-4 py-2 hover:bg-zgreen">
+        Receitas Públicas
       </a>
-      <a href="https://github.com/phoenixframework/phoenix" class="hover:text-zinc-700">
-        GitHub
+      <a href="/my-recipes" class="bg-zred text-zinc-900 rounded-lg px-4 py-2 hover:bg-zgreen">
+        Minhas Receitas
       </a>
       <a
         href="https://hexdocs.pm/phoenix/overview.html"
@@ -24,7 +21,7 @@
     </div>
   </div>
 </header>
-<main class="px-4 py-20 sm:px-6 lg:px-8">
+<main class="px-4 py-5 sm:px-6 lg:px-8 bg-zyellow quicksand-500">
   <div class="mx-auto max-w-2xl">
     <.flash_group flash={@flash} />
     <%= @inner_content %>
