Traduzido para o português e feite botões de criar e editar receita

--- a/receitas/lib/receitas_web/components/layouts/root.html.heex
+++ b/receitas/lib/receitas_web/components/layouts/root.html.heex
@@ -25,7 +25,7 @@
             href={~p"/users/settings"}
             class="text-[0.8125rem] leading-6 text-zinc-900 font-semibold hover:text-zinc-700"
           >
-            Settings
+            Configurações
           </.link>
         </li>
         <li>
@@ -34,7 +34,7 @@
             method="delete"
             class="text-[0.8125rem] leading-6 text-zinc-900 font-semibold hover:text-zinc-700"
           >
-            Log out
+            Sair
           </.link>
         </li>
       <% else %>
@@ -43,7 +43,7 @@
             href={~p"/users/register"}
             class="text-[0.8125rem] leading-6 text-zinc-900 font-semibold hover:text-zinc-700"
           >
-            Register
+            Registrar
           </.link>
         </li>
         <li>
@@ -51,7 +51,7 @@
             href={~p"/users/log_in"}
             class="text-[0.8125rem] leading-6 text-zinc-900 font-semibold hover:text-zinc-700"
           >
-            Log in
+            Login
           </.link>
         </li>
       <% end %>
