--- a/receitas/lib/receitas_web/controllers/recipe_html/new.html.heex
+++ b/receitas/lib/receitas_web/controllers/recipe_html/new.html.heex
@@ -1,6 +1,6 @@
 <.header>
   Nova Receita
-  <!--<:subtitle>Use this form to manage recipe records in your database.</:subtitle>-->
+  <!--<:subtitle>Utilize este formulário para gerenciar registros de receitas em seu banco de dados.</:subtitle>-->
 </.header>
 
 <.recipe_form changeset={@changeset} action={~p"/recipes"} />
