--- a/receitas/lib/receitas_web/controllers/recipe_html/show.html.heex
+++ b/receitas/lib/receitas_web/controllers/recipe_html/show.html.heex
@@ -3,7 +3,7 @@
   <:subtitle><%= @recipe.introduction %></:subtitle>
   <:actions>
     <.link href={~p"/recipes/#{@recipe}/edit"}>
-      <.button class="bg-blue-600 hover:bg-blue-700">Edit recipe</.button>
+      <.button class="bg-blue-600 hover:bg-blue-700">Editar receita</.button>
     </.link>
   </:actions>
 </.header>
