--- a/receitas/lib/receitas_web/components/layouts/app.html.heex
+++ b/receitas/lib/receitas_web/components/layouts/app.html.heex
@@ -2,7 +2,7 @@
   <div class="flex items-center justify-between py-3 text-sm">
     <div class="flex items-center gap-4">
       <a href="/">
-        <img src={~p"/images/logo.svg"} width="36" />
+        <img src={~p"/images/logo.png"} width="36" />
       </a>
     </div>
     <div class="flex items-center gap-4 font-semibold leading-6 text-zinc-900">
