--- a/receitas/lib/receitas_web/controllers/page_html/home.html.heex
+++ b/receitas/lib/receitas_web/controllers/page_html/home.html.heex
@@ -7,14 +7,16 @@
   <title>Bem-vindo ao Receitas Deliciosas!</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="flex items-center justify-center min-h-screen bg-gray-100">
-  <div class="bg-white p-8 rounded-lg shadow-lg text-center max-w-md mx-auto">
-    <h1 class="text-3xl font-bold text-red-600 mb-4">Bem-vindo ao Receitas Deliciosas!</h1>
-    <p class="text-lg text-gray-700 mb-6">Descubra receitas incríveis para todas as ocasiões e deixe suas melhores receitas salvas para você e para as outras pessoas.</p>
+<body class="bg-gray-100">
+  <div class="w-full min-h-screen flex items-center justify-center">
+  <div class="bg-zgreen p-20 rounded-lg shadow-lg text-center max-w-md mx-auto">
+    <h1 class="text-3xl font-bold text-red-600 mb-8">Bem-vindo ao Receitas Deliciosas!</h1>
+    <p class="text-lg text-gray-700 mb-8">Descubra receitas incríveis para todas as ocasiões! Crie suas próprias receitas e compartilhe com a comunidade!</p>
     <div class="flex justify-center space-x-4">
       <a href="/users/log_in" class="px-4 py-2 bg-orange-500 text-white font-semibold rounded hover:bg-red-600 transition duration-300">Login</a>
       <a href="/recipes" class="px-4 py-2 bg-orange-500 text-white font-semibold rounded hover:bg-green-600 transition duration-300">Ver Receitas</a>
     </div>
+  </div>
   </div>
 </body>
 </html>
