--- a/receitas/lib/receitas_web/controllers/recipe_html/index.html.heex
+++ b/receitas/lib/receitas_web/controllers/recipe_html/index.html.heex
@@ -1,5 +1,5 @@
 <.header>
-  <h1 class="text-2xl text-orange-400 font-bold">Lista de Receitas</h1>
+  <h1 class="text-2xl text-orange-400 font-bold">Lista de Receitas Públicas</h1>
 </.header>
 
 <div class="mt-4 mb-4">
