--- a/receitas/lib/receitas_web/components/layouts/app.html.heex
+++ b/receitas/lib/receitas_web/components/layouts/app.html.heex
@@ -1,8 +1,8 @@
 <header class="px-4 sm:px-6 lg:px-8 bg-zred">
   <div class="flex items-center justify-between py-3 text-sm">
     <div class="flex items-center gap-4">
-      <a href="/">
-        <img src={~p"/images/logo.png"} width="36" />
+      <a href="/recipes">
+        <img src={~p"/images/logo.png"} width="64" />
       </a>
     </div>
     <div class="flex items-center gap-4 font-semibold leading-6 text-zinc-900">
@@ -12,12 +12,24 @@
       <a href="/my-recipes" class="bg-zred text-zinc-900 rounded-lg px-4 py-2 hover:bg-zgreen">
         Minhas Receitas
       </a>
-      <a
-        href="https://hexdocs.pm/phoenix/overview.html"
-        class="rounded-lg bg-zinc-100 px-2 py-1 hover:bg-zinc-200/80"
-      >
-        Get Started <span aria-hidden="true">&rarr;</span>
+      <%= if @current_user do %>
+      <.link
+            href={~p"/users/settings"}
+            class="bg-zred border border-white text-zinc-900 rounded-lg px-4 py-2 hover:bg-zgreen"
+          >
+            Minha conta
+          </.link>
+     
+      <% else %>
+    
+      <a href="/users/register" class="bg-zred border border-black text-zinc-900 rounded-lg px-4 py-2 hover:bg-zgreen">
+        Registrar
       </a>
+      <a href="/users/log_in" class="bg-zred border border-white text-zinc-900 rounded-lg px-4 py-2 hover:bg-zgreen">
+        Login
+      </a>
+        
+      <% end %>
     </div>
   </div>
 </header>
