--- a/receitas/lib/receitas_web/controllers/recipe_html/my_recipes.html.heex
+++ b/receitas/lib/receitas_web/controllers/recipe_html/my_recipes.html.heex
@@ -1,67 +1,57 @@
-<.header class="bg-gray-800 text-white p-6 rounded-md shadow-md">
-  <h1>Minhas Receitas</h1>
-  <:subtitle>Aqui estão todas as receitas criadas por você.</:subtitle>
+<.header>
+  <h1 class="text-2xl text-orange-400 font-bold">Minhas Receitas</h1>
 </.header>
 
-<section class="max-w-3xl mx-auto mt-8 p-4">
-  <!-- Botão para adicionar nova receita -->
-  <div class="flex justify-end mb-4">
-    <.link href={~p"/recipes/new"}>
-      <.button class="bg-green-600 hover:bg-green-700 text-white px-4 py-2 rounded-md">Nova Receita</.button>
-    </.link>
-  </div>
+<div class="mt-4 mb-4">
+  <form action={~p"/my-recipes"} method="get" class="flex space-x-2">
+    <div class="w-full flex gap-2">
+     <div class="w-full"> 
+    <input type="text" name="search" value={@search_term || ""} placeholder="Buscar pelo título..." class="border border-gray-300 w-full rounded px-2 py-1"/>
+    </div>
+    <div class="flex gap-2">
+    <button type="submit" class="bg-green-500 text-white rounded px-4 py-1">Buscar</button>
+    
+    <select name="sort" class="border border-gray-300 rounded w-36 px-2 py-1">
+      <option value="asc" selected={@sort_order == "asc"}>Mais Antigo</option>
+      <option value="desc" selected={@sort_order == "desc"}>Mais Recente</option>
+    </select>
+    </div>
+    </div>
+  </form>
+</div>
 
-  <!-- Verifica se há receitas para exibir -->
-  <%= if Enum.empty?(@recipes) do %>
-    <p class="text-center text-gray-600 mt-8">Você ainda não criou nenhuma receita.</p>
-  <% else %>
-    <div class="grid gap-8">
-      <%= for recipe <- @recipes do %>
-        <div class="bg-white shadow rounded-md p-6">
-          <!-- Título e Ações -->
-          <div class="flex justify-between items-center">
-            <h2 class="text-xl font-semibold text-gray-800"><%= recipe.title %></h2>
-            <.link href={~p"/recipes/#{recipe.id}/edit"}>
-              <.button class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-md">Editar</.button>
-            </.link>
-          </div>
+<div id="recipes" class="mt-4 space-y-4">
+  <%= for recipe <- @recipes do %>
+    <div class="p-4 flex justify-between rounded-lg shadow-lg cursor-pointer text-green-900 bg-yellow-200 hover:bg-gray-200" phx-click={JS.navigate(~p"/my-recipes/#{recipe}")}>
+       <div>
+        <h2 class="font-bold text-xl flex items-center">
+            <%= recipe.title %>
+        </h2>
 
-          <!-- Introdução -->
-          <p class="text-gray-600 mt-2 mb-4"><%= recipe.introduction %></p>
+            <p><%= recipe.introduction %></p>
 
-          <!-- Ingredientes -->
-          <h3 class="text-lg font-medium text-gray-800">Ingredientes:</h3>
-          <p class="text-gray-600 mb-4"><%= recipe.ingredients %></p>
-
-          <!-- Descrição -->
-          <h3 class="text-lg font-medium text-gray-800">Descrição:</h3>
-          <p class="text-gray-600 mb-4"><%= recipe.description %></p>
-
-          <!-- Imagem e Descrição da Imagem -->
-          <div class="mt-4">
-            <%= if recipe.image do %>
-              <img src={recipe.image} alt={recipe.image_description} class="w-full max-w-sm mx-auto rounded-md shadow-md" />
-              <p class="text-gray-500 italic text-center mt-2"><%= recipe.image_description %></p>
-            <% else %>
-              <p class="text-gray-500 italic">Nenhuma imagem disponível</p>
-            <% end %>
-          </div>
-
-          <!-- Privacidade -->
-          <div class="mt-4">
-            <span class="font-semibold text-gray-700">Privado:</span>
             <%= if recipe.is_private do %>
-              <span class="text-red-500 font-semibold">Sim</span>
+                <div class="flex items-center">
+                    <span class="text-red-500 mr-1 font-bold">Privada </span>
+                    <svg width="30px" height="30px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#d62b2b" class="ml-1"> <!-- Adicionei a classe ml-1 para espaçamento -->
+                        <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                        <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                        <g id="SVGRepo_iconCarrier">
+                        <path d="M2.21967 2.21967C1.9534 2.48594 1.9292 2.9026 2.14705 3.19621L2.21967 3.28033L6.25424 7.3149C4.33225 8.66437 2.89577 10.6799 2.29888 13.0644C2.1983 13.4662 2.4425 13.8735 2.84431 13.9741C3.24613 14.0746 3.6534 13.8305 3.75399 13.4286C4.28346 11.3135 5.59112 9.53947 7.33416 8.39452L9.14379 10.2043C8.43628 10.9258 8 11.9143 8 13.0046C8 15.2138 9.79086 17.0046 12 17.0046C13.0904 17.0046 14.0788 16.5683 14.8004 15.8608L20.7197 21.7803C21.0126 22.0732 21.4874 22.0732 21.7803 21.7803C22.0466 21.5141 22.0708 21.0974 21.8529 20.8038L21.7803 20.7197L15.6668 14.6055L15.668 14.604L14.4679 13.4061L11.598 10.5368L11.6 10.536L8.71877 7.65782L8.72 7.656L7.58672 6.52549L3.28033 2.21967C2.98744 1.92678 2.51256 1.92678 2.21967 2.21967ZM10.2041 11.2655L13.7392 14.8006C13.2892 15.2364 12.6759 15.5046 12 15.5046C10.6193 15.5046 9.5 14.3853 9.5 13.0046C9.5 12.3287 9.76824 11.7154 10.2041 11.2655ZM12 5.5C10.9997 5.5 10.0291 5.64807 9.11109 5.925L10.3481 7.16119C10.8839 7.05532 11.4364 7 12 7C15.9231 7 19.3099 9.68026 20.2471 13.4332C20.3475 13.835 20.7546 14.0794 21.1565 13.9791C21.5584 13.8787 21.8028 13.4716 21.7024 13.0697C20.5994 8.65272 16.6155 5.5 12 5.5ZM12.1947 9.00928L15.996 12.81C15.8942 10.7531 14.2472 9.10764 12.1947 9.00928Z" fill="#d62b2b"></path>
+                    </g>
+                </svg>
+                </div>
             <% else %>
-              <span class="text-green-500 font-semibold">Não</span>
+                <div class="flex items-center">
+                    <span class="text-green-500 mr-2 font-bold">Pública</span>
+                    <svg width="30px" height="30px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path fill-rule="evenodd" clip-rule="evenodd" d="M6.30147 15.5771C4.77832 14.2684 3.6904 12.7726 3.18002 12C3.6904 11.2274 4.77832 9.73158 6.30147 8.42294C7.87402 7.07185 9.81574 6 12 6C14.1843 6 16.1261 7.07185 17.6986 8.42294C19.2218 9.73158 20.3097 11.2274 20.8201 12C20.3097 12.7726 19.2218 14.2684 17.6986 15.5771C16.1261 16.9282 14.1843 18 12 18C9.81574 18 7.87402 16.9282 6.30147 15.5771ZM12 4C9.14754 4 6.75717 5.39462 4.99812 6.90595C3.23268 8.42276 2.00757 10.1376 1.46387 10.9698C1.05306 11.5985 1.05306 12.4015 1.46387 13.0302C2.00757 13.8624 3.23268 15.5772 4.99812 17.0941C6.75717 18.6054 9.14754 20 12 20C14.8525 20 17.2429 18.6054 19.002 17.0941C20.7674 15.5772 21.9925 13.8624 22.5362 13.0302C22.947 12.4015 22.947 11.5985 22.5362 10.9698C21.9925 10.1376 20.7674 8.42276 19.002 6.90595C17.2429 5.39462 14.8525 4 12 4ZM10 12C10 10.8954 10.8955 10 12 10C13.1046 10 14 10.8954 14 12C14 13.1046 13.1046 14 12 14C10.8955 14 10 13.1046 10 12ZM12 8C9.7909 8 8.00004 9.79086 8.00004 12C8.00004 14.2091 9.7909 16 12 16C14.2092 16 16 14.2091 16 12C16 9.79086 14.2092 8 12 8Z" fill="#3bed3e"></path> </g></svg>
+                </div>
             <% end %>
-          </div>
-        </div>
+
+      </div>
+      <%= if recipe.image do %>
+        <img src={recipe.image} alt={recipe.image_description} class="w-40 h-24 object-cover rounded-md shadow-md" />
       <% end %>
     </div>
   <% end %>
-
-  <div class="flex justify-end mt-8">
-    <.back navigate={~p"/recipes"} class="text-blue-600 hover:underline">Voltar para as receitas</.back>
-  </div>
-</section>
+</div>
