--- a/receitas/lib/receitas_web/controllers/recipe_html/index.html.heex
+++ b/receitas/lib/receitas_web/controllers/recipe_html/index.html.heex
@@ -3,7 +3,7 @@
 </.header>
 
 <div class="mt-4 mb-4">
-  <form action={~p"/recipes"} method="get" class="flex space-x-2">
+  <form action={~p"/my-recipes"} method="get" class="flex space-x-2">
     <div class="w-full flex gap-2">
      <div class="w-full"> 
     <input type="text" name="search" value={@search_term || ""} placeholder="Buscar pelo título..." class="border border-gray-300 w-full rounded px-2 py-1"/>
