--- a/receitas/lib/receitas_web/components/layouts/app.html.heex
+++ b/receitas/lib/receitas_web/components/layouts/app.html.heex
@@ -1,8 +1,8 @@
 <header class="px-4 sm:px-6 lg:px-8 bg-zred">
   <div class="flex items-center justify-between py-3 text-sm">
     <div class="flex items-center gap-4">
-      <a href="/recipes">
-        <img src={~p"/images/logo.png"} width="64" />
+      <a href="/my-recipes">
+        <img src={~p"/images/logo.png"} width="64" />Receitas Deliciosas
       </a>
     </div>
     <div class="flex items-center gap-4 font-semibold leading-6 text-zinc-900">
