--- a/receitas/lib/receitas_web/controllers/page_html/home.html.heex
+++ b/receitas/lib/receitas_web/controllers/page_html/home.html.heex
@@ -14,7 +14,7 @@
     <p class="text-lg text-gray-700 mb-8">Descubra receitas incríveis para todas as ocasiões! Crie suas próprias receitas e compartilhe com a comunidade!</p>
     <div class="flex justify-center space-x-4">
       <a href="/users/log_in" class="px-4 py-2 bg-orange-500 text-white font-semibold rounded hover:bg-red-600 transition duration-300">Login</a>
-      <a href="/recipes" class="px-4 py-2 bg-orange-500 text-white font-semibold rounded hover:bg-green-600 transition duration-300">Ver Receitas</a>
+      <a href="/my-recipes" class="px-4 py-2 bg-orange-500 text-white font-semibold rounded hover:bg-green-600 transition duration-300">Ver Receitas</a>
     </div>
   </div>
   </div>
