--- a/receitas/lib/receitas_web/controllers/recipe_html/new.html.heex
+++ b/receitas/lib/receitas_web/controllers/recipe_html/new.html.heex
@@ -3,6 +3,6 @@
   <!--<:subtitle>Utilize este formulário para gerenciar registros de receitas em seu banco de dados.</:subtitle>-->
 </.header>
 
-<.recipe_form changeset={@changeset} action={~p"/recipes"} />
+<.recipe_form changeset={@changeset} action={~p"/my-recipes"} />
 
-<.back navigate={~p"/recipes"}>Voltar</.back>
+<.back navigate={~p"/my-recipes"}>Voltar</.back>
