--- a/receitas/lib/receitas_web/controllers/recipe_html/show.html.heex
+++ b/receitas/lib/receitas_web/controllers/recipe_html/show.html.heex
@@ -2,7 +2,7 @@
   <%= @recipe.title %>
   <:subtitle><%= @recipe.introduction %></:subtitle>
   <:actions>
-    <.link href={~p"/recipes/#{@recipe}/edit"}>
+    <.link href={~p"/my-recipes/#{@recipe}/edit"}>
       <.button class="bg-blue-600 hover:bg-blue-700">Editar receita</.button>
     </.link>
   </:actions>
@@ -46,6 +46,49 @@
       </:item>
     </.list>
   </div>
+
+  <div class="flex justify-end">
+    <.back navigate={~p"/my-recipes"} class="text-blue-600 hover:underline">Voltar para as receitas</.back>
+  </div>
+</section>
+
+<div class="flex justify-between">
+<h1 class="text-2xl text-green-900 font-bold"><%= @recipe.title %></h1>
+<div class="flex gap-2">
+<a href={~p"/my-recipes/#{@recipe}/edit"} class="bg-yellow-400 hover:bg-yellow-600 px-4 py-2 rounded">Editar receita</a>
+    <a href="/my-recipes/#{@recipe}/delete" class="bg-red-500 hover:bg-red-300 text-white px-4 py-2 rounded">Excluir receita</a>
+  </div>
+  </div>
+<%= if @recipe.is_private do %>
+          <span class="text-red-500 font-semibold">Privada</span>
+        <% else %>
+          <span class="text-green-500 font-semibold">Pública</span>
+        <% end %>
+<%= if @recipe.image do %>
+    <img src={@recipe.image} alt={@recipe.image_description} class="w-[200px] h-[40px] object-cover mx-auto rounded-md shadow-md" />
+<% end %>
+
+
+  
+  
+
+
+<section class="max-w-3xl mx-auto mt-8 p-4">
+
+  <h2 class="text-2xl font-semibold text-gray-800 border-b pb-2 mb-4">Introdução</h2>
+
+  <p><%= @recipe.introduction %></p>
+  <!-- Ingredientes Section -->
+  <h2 class="mt-8 text-2xl font-semibold text-gray-800 border-b pb-2 mb-4">Ingredientes</h2>
+  <p class="text-gray-600 mb-4">
+    <%= @recipe.ingredients %>
+  </p>
+
+  <!-- Detalhes da Receita -->
+  <h2 class="mt-8 text-2xl font-semibold text-gray-800 border-b pb-2 mb-4">Descrição</h2>
+  <p>
+    <%= @recipe.description %>
+  </p>
 
   <div class="flex justify-end">
     <.back navigate={~p"/recipes"} class="text-blue-600 hover:underline">Voltar para as receitas</.back>
