--- a/receitas/lib/receitas_web/controllers/recipe_html/recipe_form.html.heex
+++ b/receitas/lib/receitas_web/controllers/recipe_html/recipe_form.html.heex
@@ -3,9 +3,9 @@
     Oops, algo deu errado! Por favor, cheque os erros abaixo.
   </.error>
   <.input field={f[:title]} type="text" label="Nome da Receita" />
-  <.input field={f[:introduction]} type="textarea" label="Introdução" />
-  <.input field={f[:ingredients]} type="textarea" label="Ingredientes" />
-  <.input field={f[:description]} type="textarea" label="Texto da Receita" />
+  <.input field={f[:introduction]} style="height: 150px;" type="textarea" label="Introdução" />
+  <.input field={f[:ingredients]} style="height: 200px;" type="textarea" label="Ingredientes" />
+  <.input field={f[:description]} style="height: 200px;" type="textarea" label="Texto da Receita" />
   <.input field={f[:image]} type="text" label="Url da Imagem" />
   <.input field={f[:image_description]} type="text" label="Descrição da Imagem" />
   <.input field={f[:is_private]} type="checkbox" label="Privado" />
