--- a/receitas/lib/receitas_web/controllers/recipe_html/edit.html.heex
+++ b/receitas/lib/receitas_web/controllers/recipe_html/edit.html.heex
@@ -1,8 +1,9 @@
 <.header>
-  Edit Recipe <%= @recipe.id %>
-  <:subtitle>Utilize este formulário para gerenciar registros de receitas em seu banco de dados.</:subtitle>
+  Editar receita:<br/> <%= @recipe.title %>
 </.header>
 
 <.recipe_form changeset={@changeset} action={~p"/my-recipes/#{@recipe}"} />
 
+<div style="margin-top: -40px; margin-bottom: 20px;">
 <.back navigate={~p"/my-recipes"}>Voltar para receitas</.back>
+</div>
