--- a/receitas/lib/receitas_web/controllers/recipe_html/new.html.heex
+++ b/receitas/lib/receitas_web/controllers/recipe_html/new.html.heex
@@ -5,4 +5,6 @@
 
 <.recipe_form changeset={@changeset} action={~p"/my-recipes"} />
 
+<div style="margin-top: -40px; margin-bottom: 20px;">
 <.back navigate={~p"/my-recipes"}>Voltar</.back>
+</div>
