--- a/receitas/lib/receitas_web/controllers/recipe_html/show_public.html.heex
+++ b/receitas/lib/receitas_web/controllers/recipe_html/show_public.html.heex
@@ -1,8 +1,11 @@
 
-<h1 class="text-2xl text-green-900 font-bold"><%= @recipe.title %></h1>
-<h3 class="mb-2"><%= @recipe.user.email %></h3><br/>
+<div style="margin-top: -50px;">
+    <.back navigate={~p"/recipes"} class="text-blue-600 hover:underline">Voltar para as receitas</.back>
+</div>
+<h1 class="text-2xl mt-2.5 text-green-900 font-bold"><%= @recipe.title %></h1>
+<h3 class="text-yellow-800"><%= @recipe.user.email %></h3>
 <%= if @recipe.image do %>
-    <img src={@recipe.image} alt={@recipe.image_description} class="w-[200px] h-[40px] object-cover mx-auto rounded-md shadow-md" />
+    <img src={@recipe.image} alt={@recipe.image_description} class="w-full mt-4 h-[400px] object-cover mx-auto rounded-md shadow-md" />
 <% end %>
 
 
@@ -10,20 +13,17 @@
 
   <h2 class="text-2xl font-semibold text-gray-800 border-b pb-2 mb-4">Introdução</h2>
 
-  <p><%= @recipe.introduction %></p>
+  <p class="text-gray-600 mb-4"><%= @recipe.introduction |> String.replace("\n", "<br>") |> Phoenix.HTML.raw() %></p>
   <!-- Ingredientes Section -->
   <h2 class="mt-8 text-2xl font-semibold text-gray-800 border-b pb-2 mb-4">Ingredientes</h2>
-  <p class="text-gray-600 mb-4">
-    <%= @recipe.ingredients %>
+  <p>
+    <%= @recipe.ingredients |> String.replace("\n", "<br>") |> Phoenix.HTML.raw() %>
   </p>
 
   <!-- Detalhes da Receita -->
   <h2 class="mt-8 text-2xl font-semibold text-gray-800 border-b pb-2 mb-4">Descrição</h2>
   <p>
-    <%= @recipe.description %>
+    <%= @recipe.description |> String.replace("\n", "<br>") |> Phoenix.HTML.raw() %>
   </p>
 
-  <div class="flex justify-end">
-    <.back navigate={~p"/recipes"} class="text-blue-600 hover:underline">Voltar para as receitas</.back>
-  </div>
 </section>
